--- a/okteto.yml
+++ b/okteto.yml
@@ -1,8 +1,10 @@
 icon: https://github.com/okteto/multirepo-demo/raw/main/lambda-icon.jpg
 deploy:
-  - ls /usr/local/bin
-  - ls /usr/okteto-bin
-  - sam build
+  - curl https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip > /tmp/sam.zip
+  - unzip aws-sam-cli-linux-x86_64.zip -d /tmp/sam-installation
+  - ./tmp/sam-installation/install
+  - sam --version
+  - aws --version
   - sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --s3-prefix "${OKTETO_NAMESPACE}" --stack-name "${OKTETO_NAMESPACE}-okteto-lambda" --parameter-overrides ParameterKey=MongoDBUsername,ParameterValue=${MONGODB_USERNAME} ParameterKey=MongoDBPassword,ParameterValue=${MONGODB_PASSWORD} ParameterKey=MongoDBDatabase,ParameterValue=${MONGODB_DATABASE} ParameterKey=MongoDBHost,ParameterValue=${MONGODB_HOST}
   - aws cloudformation describe-stacks --region us-east-1 --stack-name ${OKTETO_NAMESPACE}-okteto-lambda --query "Stacks[0].Outputs[0].OutputValue" --output text > lambda-url
   - okteto pipeline deploy --name vote -r https://github.com/okteto/microservices-demo --branch lambda --var LAMBDA_URL=`cat lambda-url` -f vote/okteto-pipeline.yml
