--- a/okteto.yml
+++ b/okteto.yml
@@ -1,9 +1,12 @@
 icon: https://github.com/okteto/multirepo-demo/raw/main/lambda-icon.jpg
 deploy:
-  - curl https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip > /tmp/sam.zip
+  - curl -L https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip -o /tmp/sam.zip
   - unzip /tmp/sam.zip -d /tmp/sam-installation
   - ./tmp/sam-installation/install
   - sam --version
+  - curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o /tmp/awscliv2.zip
+  - unzip /tmp/awscliv2.zip -d /tmp/aws
+  - ./tmp/aws/install
   - aws --version
   - sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --s3-prefix "${OKTETO_NAMESPACE}" --stack-name "${OKTETO_NAMESPACE}-okteto-lambda" --parameter-overrides ParameterKey=MongoDBUsername,ParameterValue=${MONGODB_USERNAME} ParameterKey=MongoDBPassword,ParameterValue=${MONGODB_PASSWORD} ParameterKey=MongoDBDatabase,ParameterValue=${MONGODB_DATABASE} ParameterKey=MongoDBHost,ParameterValue=${MONGODB_HOST}
   - aws cloudformation describe-stacks --region us-east-1 --stack-name ${OKTETO_NAMESPACE}-okteto-lambda --query "Stacks[0].Outputs[0].OutputValue" --output text > lambda-url
