--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -1,5 +1,6 @@
 icon: https://github.com/okteto/multirepo-demo/raw/main/lambda-icon.jpg
 deploy:
+  - echo mongohost $MONGODB_HOST
   - /usr/local/aws-sam-cli/current/bin/sam build
   - /usr/local/aws-sam-cli/current/bin/sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --s3-prefix "${OKTETO_NAMESPACE}" --stack-name "${OKTETO_NAMESPACE}-okteto-lambda" --parameter-overrides ParameterKey=MongoDBUsername,ParameterValue=${MONGODB_USERNAME} ParameterKey=MongoDBPassword,ParameterValue=${MONGODB_PASSWORD} ParameterKey=MongoDBDatabase,ParameterValue=${MONGODB_DATABASE} ParameterKey=MongoDBHost,ParameterValue=${MONGODB_HOST}
   - /usr/local/aws-cli/v2/current/bin/aws cloudformation describe-stacks --region us-east-1 --stack-name ${OKTETO_NAMESPACE}-okteto-lambda --query "Stacks[0].Outputs[0].OutputValue" --output text > lambda-url
